admin layout updates

--- a/views/include/_main.ejs
+++ b/views/include/_main.ejs
@@ -8,8 +8,8 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Slots</a></li>
-              <li class="breadcrumb-item active">Bookings</li>
+              <li class="breadcrumb-item"><a href="bookings">Bookings</a></li>
+              <li class="breadcrumb-item active">Slots</li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -21,13 +21,18 @@
     <div class="content">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
-          </div>
-          <!-- /.col-md-6 -->
+            <%- include('_slots_show') %>
         </div>
-        <!-- /.row -->
       </div>
-      <!-- /.container-fluid -->
     </div>
-    <!-- /.content -->
   </div>
+
+
+
+
+
+
+
+
+
+
