--- a/views/include/_sidebar.ejs
+++ b/views/include/_sidebar.ejs
@@ -9,7 +9,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column"  role="menu" data-accordion="false">
           <li class="nav-item">
-            <a href="add_slot" class="nav-link">
+            <a href="/add_slot" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Slots
