--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -23,10 +23,10 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Home</a>
+        <a href="/" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Bookings</a>
+        <a href="/bookings" class="nav-link">Bookings</a>
       </li>
     </ul>
 
