--- a/views/include/__slots_main.ejs
+++ b/views/include/__slots_main.ejs
@@ -8,7 +8,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="bookings">Bookings</a></li>
+              <li class="breadcrumb-item"><a href="/bookings">Bookings</a></li>
               <li class="breadcrumb-item active">Slots</li>
             </ol>
           </div><!-- /.col -->
