--- a/views/slots.ejs
+++ b/views/slots.ejs
@@ -7,7 +7,7 @@
 <!-- /include sidebar -->
 
 <!-- include main -->
-<%- include('include/_main') %>
+<%- include('include/__slots_main') %>
 <!-- /include main-->
 
 <!-- include footer -->
