--- a/views/add_slot.ejs
+++ b/views/add_slot.ejs
@@ -34,6 +34,11 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript">
+    $(function () {
+        $('#datetimepicker1').datetimepicker();
+    });
+ </script>
 
 <!-- include footer -->
 <%- include('include/_footer') %>
